cicd/nginx-demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-demo
  labels:
    app.kubernetes.io/name: nginx-demo
    app.kubernetes.io/part-of: sre-cicd-demo
